signout feature implementation

--- a/ecomprj/templates/partials/base.html
+++ b/ecomprj/templates/partials/base.html
@@ -18,6 +18,10 @@
     <!-- Core Style CSS -->
     <link rel="stylesheet" href="{% static 'css/core-style.css' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'assets1/css/login.css' %}}">
+    <link rel="stylesheet" href="{% static 'assets/css/login.css' %}}">
+    
+    
 
 </head>
 
@@ -109,6 +113,7 @@
                 <!-- User Login Info -->
                 <div class="user-login-info">
                     <a href="#"><img src="{% static 'img/core-img/user.svg' %}" alt=""></a>
+                    <!--<a href="{% userauths 'sign-in'%}"><img src="{% static 'img/core-ing/user.svg' %}" alt=""></a> -->
                 </div>
                 <!-- Cart Area -->
                 <div class="cart-area">
@@ -193,9 +198,9 @@
 <div class="row mt-5">
                 <div class="col-md-12 text-center">
                     <p>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>, distributed by <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        
+    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>, distributed by Pratham Bhandari
+    
                     </p>
                 </div>
             </div>
