--- a/ecomprj/templates/core/index.html
+++ b/ecomprj/templates/core/index.html
@@ -84,7 +84,7 @@
     <!-- ##### Right Side Cart End ##### -->
 
     <!-- ##### Welcome Area Start ##### -->
-    <section class="welcome_area bg-img background-overlay" style="background-image: url(img/bg-img/bg-1.jpg);">
+    <section class="welcome_area bg-img background-overlay" style="background-image: url(img/bg-img/bg-1.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -311,7 +311,7 @@
     <div class="brands-area d-flex align-items-center justify-content-between">
         <!-- Brand Logo -->
         <div class="single-brands-logo">
-            <img src="{% static 'img/core-img/brand1.png' %}" alt="">
+            <img src="{% static 'img/core-img/download.png' %}" alt="">
         </div>
         <!-- Brand Logo -->
         <div class="single-brands-logo">
